--- a/changelog_unreleased/html/pr-7273.md
+++ b/changelog_unreleased/html/pr-7273.md
@@ -1,7 +1,5 @@
 #### Fix HTML elements with colon ([#7273](https://github.com/prettier/prettier/pull/7273) by [@fisker](https://github.com/fisker))
 
-Treat elements with colon as block, and normal elements inside as it is.
-
 <!-- prettier-ignore -->
 ```html
 <!-- Input -->
@@ -24,6 +22,6 @@ Treat elements with colon as block, and normal elements inside as it is.
   <div>block block block</div>
   <span> inline inline </span><span> inline inline </span
   ><span> inline inline </span><span> inline inline </span
-  ><html:button> known inline</html:button>
-</with:colon>
+  ><html:button> known inline</html:button></with:colon
+>
 ```
