update changelog code

--- a/changelog_unreleased/html/pr-7273.md
+++ b/changelog_unreleased/html/pr-7273.md
@@ -4,24 +4,31 @@
 ```html
 <!-- Input -->
 <with:colon>
-  <div> block block block </div><div> block block block </div><div> block block block </div><span> inline inline  </span><span> inline inline  </span><span> inline inline  </span><span> inline inline  </span><html:button> known inline</html:button></with:colon>
+  <div> block block block  block block block  block block block </div><div>  block block block k </div><pre> pre pr
+e
+  pre </pre><span> inline inline  </span><span> inline inline  </span><span> inline inline  </span><span> inline inline  </span><html:button> known inline</html:button></with:colon>
 
 <!-- Prettier stable -->
 <with:colon>
-  <div> block block block </div><div> block block block </div
-  ><div> block block block </div><span> inline inline </span
+  <div> block block block block block block block block block </div
+  ><div> block block block k </div><pre> pre pr e pre </pre
   ><span> inline inline </span><span> inline inline </span
-  ><span> inline inline </span
+  ><span> inline inline </span><span> inline inline </span
   ><html:button> known inline</html:button></with:colon
 >
 
 <!-- Prettier master -->
 <with:colon>
-  <div>block block block</div>
-  <div>block block block</div>
-  <div>block block block</div>
+  <div>block block block block block block block block block</div>
+  <div>block block block k</div>
+  <pre
+> pre pr
+e
+  pre </pre
+  >
   <span> inline inline </span><span> inline inline </span
   ><span> inline inline </span><span> inline inline </span
   ><html:button> known inline</html:button></with:colon
 >
+
 ```
