--- a/changelog_unreleased/html/pr-7273.md
+++ b/changelog_unreleased/html/pr-7273.md
@@ -1,34 +1,57 @@
-#### Fix HTML elements with colon ([#7273](https://github.com/prettier/prettier/pull/7273) by [@fisker](https://github.com/fisker))
+#### HTML: Fix elements with colon ([#7273](https://github.com/prettier/prettier/pull/7273) by [@fisker](https://github.com/fisker))
 
 <!-- prettier-ignore -->
 ```html
 <!-- Input -->
 <with:colon>
-  <div> block block block  block block block  block block block </div><div>  block block block k </div><pre> pre pr
-e
-  pre </pre><span> inline inline  </span><span> inline inline  </span><span> inline inline  </span><span> inline inline  </span><html:button> known inline</html:button></with:colon>
+<div> looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog block </div>
+<div> block </div><div> block </div> <div> block </div><div> block </div><div> block </div>
+<pre> pre pr
+e</pre>
+<textarea> pre-wrap pr
+e-wrap </textarea>
+<span> looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog inline </span>
+<span> inline </span><span> inline </span> <span> inline </span><span> inline </span>
+</with:colon>
 
 <!-- Prettier stable -->
 <with:colon>
-  <div> block block block block block block block block block </div
-  ><div> block block block k </div><pre> pre pr e pre </pre
-  ><span> inline inline </span><span> inline inline </span
-  ><span> inline inline </span><span> inline inline </span
-  ><html:button> known inline</html:button></with:colon
->
+  <div>
+    looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog block
+  </div>
+  <div> block </div><div> block </div> <div> block </div><div> block </div
+  ><div> block </div>
+  <pre> pre pr e</pre>
+  <textarea> pre-wrap pr e-wrap </textarea>
+  <span>
+    looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog inline
+  </span>
+  <span> inline </span><span> inline </span> <span> inline </span
+  ><span> inline </span>
+</with:colon>
 
 <!-- Prettier master -->
 <with:colon>
-  <div>block block block block block block block block block</div>
-  <div>block block block k</div>
-  <pre
-> pre pr
-e
-  pre </pre
+  <div>
+    looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog block
+  </div>
+  <div>block</div>
+  <div>block</div>
+  <div>block</div>
+  <div>block</div>
+  <div>block</div>
+  <pre>
+ pre pr
+e</pre
   >
-  <span> inline inline </span><span> inline inline </span
-  ><span> inline inline </span><span> inline inline </span
-  ><html:button> known inline</html:button></with:colon
->
-
+  <textarea>
+ pre-wrap pr
+e-wrap </textarea
+  >
+  <span>
+    looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog inline
+  </span>
+  <span> inline </span><span> inline </span> <span> inline </span
+  ><span> inline </span>
+</with:colon>
 ```
