--- a/changelog_unreleased/html/pr-7273.md
+++ b/changelog_unreleased/html/pr-7273.md
@@ -1,11 +1,11 @@
-#### HTML: Fix elements with colon ([#7273](https://github.com/prettier/prettier/pull/7273) by [@fisker](https://github.com/fisker))
+#### HTML: Fix elements with colon & lower case HTML tags everywhere ([#7273](https://github.com/prettier/prettier/pull/7273) by [@fisker](https://github.com/fisker))
 
 <!-- prettier-ignore -->
 ```html
 <!-- Input -->
 <with:colon>
 <div> looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog block </div>
-<div> block </div><div> block </div> <div> block </div><div> block </div><div> block </div>
+<DIV> block </DIV><DIV> block </DIV> <DIV> block </DIV><div> block </div><div> block </div>
 <pre> pre pr
 e</pre>
 <textarea> pre-wrap pr
@@ -19,7 +19,7 @@ e-wrap </textarea>
   <div>
     looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog block
   </div>
-  <div> block </div><div> block </div> <div> block </div><div> block </div
+  <DIV> block </DIV><DIV> block </DIV> <DIV> block </DIV><div> block </div
   ><div> block </div>
   <pre> pre pr e</pre>
   <textarea> pre-wrap pr e-wrap </textarea>
