Add category in title check

--- a/changelog_unreleased/handlebars/pr-7157.md
+++ b/changelog_unreleased/handlebars/pr-7157.md
@@ -1,4 +1,4 @@
-#### handlebars: Improve MustacheStatement printing ([#7157](https://github.com/prettier/prettier/pull/7157) by [@dcyriller](https://github.com/dcyriller))
+#### Improve MustacheStatement printing ([#7157](https://github.com/prettier/prettier/pull/7157) by [@dcyriller](https://github.com/dcyriller))
 
 <!-- prettier-ignore -->
 ```hbs
