--- a/changelog_unreleased/mdx/pr-6398.md
+++ b/changelog_unreleased/mdx/pr-6398.md
@@ -1,4 +1,4 @@
-#### MDX: fix JSX Fragment format incorrectly ([#6398](https://github.com/prettier/prettier/pull/6398) by [@JounQin](https://github.com/JounQin))
+#### Fix JSX Fragment format incorrectly ([#6398](https://github.com/prettier/prettier/pull/6398) by [@JounQin](https://github.com/JounQin))
 
 Previous versions format JSX Fragment incorrectly in mdx, this has been fixed in this version.
 
