Add changelog lint script (#7320)
* Add changelog lint script

* Refactor lint script

* spell

* Fix indent

* fix templateComment

* add H4 check

* Add category in title check

* use array destructuring

* Add space check

--- a/changelog_unreleased/handlebars/pr-7051.md
+++ b/changelog_unreleased/handlebars/pr-7051.md
@@ -1,4 +1,4 @@
-#### handlebars: Fix superfluous line breaks in ConcatStatement ([7051](https://github.com/prettier/prettier/pull/7051) by [@dcyriller](https://github.com/dcyriller))
+#### Fix superfluous line breaks in ConcatStatement ([#7051](https://github.com/prettier/prettier/pull/7051) by [@dcyriller](https://github.com/dcyriller))
 
 <!-- prettier-ignore -->
 ```hbs
