--- a/changelog_unreleased/handlebars/pr-7306.md
+++ b/changelog_unreleased/handlebars/pr-7306.md
@@ -3,15 +3,22 @@
 <!-- prettier-ignore -->
 ```
 <!-- Input -->
-<script type="text/x-handlebars-template">{{component 'hey'}}</script>
+<script type="text/x-handlebars-template">
+  {{component arg1='hey' arg2=(helper this.arg7 this.arg4) arg3=anotherone arg6=this.arg8}}
+</script>
 
 <!-- Output (Prettier stable) -->
 <script type="text/x-handlebars-template">
-  {{component 'hey'}}
+  {{component arg1='hey' arg2=(helper this.arg7 this.arg4) arg3=anotherone arg6=this.arg8}}
 </script>
 
 <!-- Output (Prettier master) -->
 <script type="text/x-handlebars-template">
-  {{component "hey"}}
+  {{component
+    arg1='hey'
+    arg2=(helper this.arg7 this.arg4)
+    arg3=anotherone
+    arg6=this.arg8
+  }}
 </script>
 ```
