Make input ugly

--- a/changelog_unreleased/html/pr-7295.md
+++ b/changelog_unreleased/html/pr-7295.md
@@ -3,7 +3,11 @@
 <!-- prettier-ignore -->
 ```html
 <!-- Input -->
-<img srcset="/media/examples/surfer-240-200.jpg" />
+<img
+
+srcset="
+             /media/examples/surfer-240-200.jpg
+">
 
 <!-- Prettier stable -->
 Error: Mixed descriptor in srcset is not supported
