--- a/changelog_unreleased/javascript/pr-3903.md
+++ b/changelog_unreleased/javascript/pr-3903.md
@@ -1,7 +1,8 @@
-#### Always add a space after the `function` keyword([#3903](https://github.com/prettier/prettier/pull/3903) by [@j-f1](https://github.com/j-f1))
+#### Always add a space after the `function` keyword ([#3903](https://github.com/prettier/prettier/pull/3903) by [@j-f1](https://github.com/j-f1), [@josephfrazier](https://github.com/josephfrazier), [@sosukesuzuki](https://github.com/sosukesuzuki), [@thorn0](https://github.com/thorn0))
 
-Previously, a space would be added after the `function` keyword for function declaration, but not for function expression. This modify to always add a space after the `function` keyword for consistency.
+Previously, a space would be added after the `function` keyword in function declarations, but not in function expressions. Now, for consistency, a space is always added after the `function` keyword, including in generators.
 
+<!-- prettier-ignore -->
 ```js
 // Input
 const identity = function (value) {
@@ -10,6 +11,8 @@ const identity = function (value) {
 function identity (value) {
   return value;
 }
+function * generator() {}
+const f = function<T>(value: T) {}
 
 // Prettier stable
 const identity = function(value) {
@@ -18,6 +21,8 @@ const identity = function(value) {
 function identity(value) {
   return value;
 }
+function* generator() {}
+const f = function<T>(value: T) {};
 
 // Prettier master
 const identity = function (value) {
@@ -26,4 +31,6 @@ const identity = function (value) {
 function identity(value) {
   return value;
 }
+function *generator() {}
+const f = function <T>(value: T) {};
 ```
