print space between yield and *

--- a/changelog_unreleased/javascript/pr-3903.md
+++ b/changelog_unreleased/javascript/pr-3903.md
@@ -1,6 +1,6 @@
 #### Always add a space after the `function` keyword ([#3903](https://github.com/prettier/prettier/pull/3903) by [@j-f1](https://github.com/j-f1), [@josephfrazier](https://github.com/josephfrazier), [@sosukesuzuki](https://github.com/sosukesuzuki), [@thorn0](https://github.com/thorn0))
 
-Previously, a space would be added after the `function` keyword in function declarations, but not in function expressions. Now, for consistency, a space is always added after the `function` keyword, including in generators.
+Previously, a space would be added after the `function` keyword in function declarations, but not in function expressions. Now, for consistency, a space is always added after the `function` keyword, including in generators. Also, a space is now added between `yield` and `*`, which can help with [catching bugs](https://github.com/prettier/prettier/issues/7028#user-content-bugs).
 
 <!-- prettier-ignore -->
 ```js
@@ -11,7 +11,11 @@ const identity = function (value) {
 function identity (value) {
   return value;
 }
-function * generator() {}
+function * getRawText() {
+  for (const token of tokens) {
+    yield* token.getRawText();
+  }
+}
 const f = function<T>(value: T) {}
 
 // Prettier stable
@@ -21,7 +25,11 @@ const identity = function(value) {
 function identity(value) {
   return value;
 }
-function* generator() {}
+function* getRawText() {
+  for (const token of tokens) {
+    yield* token.getRawText();
+  }
+}
 const f = function<T>(value: T) {};
 
 // Prettier master
@@ -31,6 +39,10 @@ const identity = function (value) {
 function identity(value) {
   return value;
 }
-function *generator() {}
+function *getRawText() {
+  for (const token of tokens) {
+    yield *token.getRawText();
+  }
+}
 const f = function <T>(value: T) {};
 ```
