--- a/changelog_unreleased/html/pr-7273.md
+++ b/changelog_unreleased/html/pr-7273.md
@@ -1,4 +1,6 @@
-#### HTML: Fix elements with colon & lower case HTML tags everywhere ([#7273](https://github.com/prettier/prettier/pull/7273) by [@fisker](https://github.com/fisker))
+#### Don't treat colons as namespace prefix delimiters in tag names ([#7273](https://github.com/prettier/prettier/pull/7273) by [@fisker](https://github.com/fisker))
+
+In HTML5, colons don't have any special meaning in tag names. Previously, Prettier treated them the XML way, as namespace prefix delimiters, but no more. In practice, this means that tags whose ancestors have colons in their names are now treated as usual HTML tags: if they're known standard tags, their names can be lowercased and assumptions can be made about their whitespace sensitivity; custom elements whose names are unknown to Prettier retain the casing of their names and are treated as inline with `--html-whitespace-sensitivity css`.
 
 <!-- prettier-ignore -->
 ```html
