--- a/changelog_unreleased/graphql/pr-7305.md
+++ b/changelog_unreleased/graphql/pr-7305.md
@@ -1,6 +1,6 @@
-#### Improve separator between interfaces detection ([#7305](https://github.com/prettier/prettier/pull/7305) by [@fisker](https://github.com/fisker))
+#### Improve detection of separator between interfaces ([#7305](https://github.com/prettier/prettier/pull/7305) by [@fisker](https://github.com/fisker))
 
-Previously the separator between interfaces detection is not stable.
+Even though using a comma to separate multiple implemented interfaces is deprecated syntax, in order to support legacy use cases, Prettier keeps the original separator and doesn't wilfully replace commas with ampersands. Previously, however, this logic contained a bug, so the wrong separator could end up in the output. This is fixed now.
 
 <!-- prettier-ignore -->
 ```graphql
