--- a/changelog_unreleased/graphql/pr-7305.md
+++ b/changelog_unreleased/graphql/pr-7305.md
@@ -6,7 +6,7 @@ Even though using a comma to separate multiple implemented interfaces is depreca
 ```graphql
 # Input
 type Type1 implements A, B
-# { &  <-- Remove this comment changes separator in stable
+# { &  <-- Removing this comment changes the separator in stable
 {a: a}
 
 # Separator keep as it is in this case
@@ -14,7 +14,7 @@ type Type2 implements A, B & C{a: a}
 
 # Prettier stable
 type Type1 implements A & B {
-  # { &  <-- Remove this comment changes separator in stable
+  # { &  <-- Removing this comment changes the separator in stable
   a: a
 }
 
@@ -25,7 +25,7 @@ type Type2 implements A & B & C {
 
 # Prettier master
 type Type1 implements A, B {
-  # { &  <-- Remove this comment changes separator in stable
+  # { &  <-- Removing this comment changes the separator in stable
   a: a
 }
 
