--- a/changelog_unreleased/cli/pr-6203.md
+++ b/changelog_unreleased/cli/pr-6203.md
@@ -1,4 +1,4 @@
-#### API/CLI: `.prettierignore` now resolves upwards like `.gitignore` ([#6203](https://github.com/prettier/prettier/pull/6203) by [@bmalehorn])
+#### API/CLI: `.prettierignore` now resolves upwards like `.gitignore` ([#6203](https://github.com/prettier/prettier/pull/6203) by [@bmalehorn](https://github.com/bmalehorn))
 
 When deciding to ignore a file, allow `.prettierignore` files at any directory, not just the current directory. This allows users to put general rules in the root of the repository, then override them in subdirectories.
 
