--- a/changelog_unreleased/api/pr-7430.md
+++ b/changelog_unreleased/api/pr-7430.md
@@ -1,39 +1,21 @@
-<!--
+#### Change default value for `arrowParens` to `always` ([#7430](https://github.com/prettier/prettier/pull/7430) by [@kachkaev](https://github.com/kachkaev))
 
-1. Choose a folder based on which language your PR is for.
-
-   - For JavaScript, choose `javascript/` etc.
-   - For TypeScript specific syntax, choose `typescript/`.
-   - If your PR applies to multiple languages, such as TypeScript/Flow, choose one folder and mention which languages it applies to.
-
-2. In your chosen folder, create a file with your PR number: `pr-XXXX.md`. For example: `typescript/pr-6728.md`.
-
-3. Copy the content below and paste it in your new file.
-
-4. Fill in a title, the PR number and your user name.
-
-5. Optionally write a description. Many times it’s enough with just sample code.
-
-6. Change ```jsx to your language. For example, ```yaml.
-
-7. Change the `// Input` and `// Prettier` comments to the comment syntax of your language. For example, `# Input`.
-
-8. Choose some nice input example code. Paste it along with the output before and after your PR.
-
--->
-
-#### Title ([#XXXX](https://github.com/prettier/prettier/pull/XXXX) by [@user](https://github.com/user))
-
-Optional description if it makes sense.
+[Since version 1.9](https://prettier.io/blog/2017/12/05/1.9.0.html#option-to-add-parens-in-arrow-function-arguments-3324httpsgithubcomprettierprettierpull3324-by-rattrayalexhttpsgithubcomrattrayalex-and-suchipihttpsgithubcomsuchipi), Prettier has an option to always wrap arrow function arguments with parentheses.
+Since version 2.0, this behavior becomes default.
 
 <!-- prettier-ignore -->
-```jsx
+```ts
 // Input
-(foo ?? baz) || baz;
+const fn = (x) => y => x + y;
 
 // Prettier stable
-foo ?? baz || baz;
+const fn = x => y => x + y;
 
 // Prettier master
-(foo ?? baz) || baz;
+const fn = (x) => (y) => x + y;
 ```
+
+Although avoiding parentheses in the isolated example above reduces visual noise, consistent use of parentheses makes it easier to edit real codebases.
+When Prettier removes parentheses, it is harder to add a type annotation, an extra argument or a default value as well as making [other changes](https://twitter.com/ManuelBieh/status/1181880524954050560).
+
+You are encouraged to use the new default value, however, if the old behavior is preferred, please configure Prettier with `{ "arrowParens": "avoid" }`.
