--- a/changelog_unreleased/api/pr-7430.md
+++ b/changelog_unreleased/api/pr-7430.md
@@ -15,7 +15,8 @@ const fn = x => y => x + y;
 const fn = (x) => (y) => x + y;
 ```
 
-Although avoiding parentheses in the isolated example above reduces visual noise, consistent use of parentheses makes it easier to edit real codebases.
-When Prettier removes parentheses, it is harder to add a type annotation, an extra argument or a default value as well as making [other changes](https://twitter.com/ManuelBieh/status/1181880524954050560).
+At a first glance, avoiding parentheses in the isolated example above may look like a better option because of less visual noise.
+However, when Prettier removes parentheses, it becomes harder to add a type annotation, an extra argument or a default value as well as making [other changes](https://twitter.com/ManuelBieh/status/1181880524954050560).
+Consistent use of parentheses provides a better developer experience when editing real codebases, which justifies the change.
 
-You are encouraged to use the new default value, however, if the old behavior is preferred, please configure Prettier with `{ "arrowParens": "avoid" }`.
+You are encouraged to use the new default value, however, if the old behavior is still preferred, please configure Prettier with `{ "arrowParens": "avoid" }`.
