Minor edits in changelog

--- a/changelog_unreleased/api/pr-7430.md
+++ b/changelog_unreleased/api/pr-7430.md
@@ -15,8 +15,8 @@ const fn = x => y => x + y;
 const fn = (x) => (y) => x + y;
 ```
 
-At a first glance, avoiding parentheses in the isolated example above may look like a better option because of less visual noise.
+At first glance, avoiding parentheses in the isolated example above may look like a better choice because of less visual noise.
 However, when Prettier removes parentheses, it becomes harder to add a type annotation, an extra argument or a default value as well as making [other changes](https://twitter.com/ManuelBieh/status/1181880524954050560).
 Consistent use of parentheses provides a better developer experience when editing real codebases, which justifies the change.
 
-You are encouraged to use the new default value, however, if the old behavior is still preferred, please configure Prettier with `{ "arrowParens": "avoid" }`.
+You are encouraged to use the new default value, but if the old behavior is still preferred, please configure Prettier with `{ "arrowParens": "avoid" }`.
