--- a/changelog_unreleased/api/pr-7435.md
+++ b/changelog_unreleased/api/pr-7435.md
@@ -1,3 +1,17 @@
 #### Change default value for `endOfLine` to `lf` ([#7435](https://github.com/prettier/prettier/pull/7435) by [@kachkaev](https://github.com/kachkaev))
 
-<!-- Work in progress -->
+Early versions of Prettier were formatting all files with the \*nix flavor of [line endings](https://en.wikipedia.org/wiki/Newline) (`\n`, also known as `LF`).
+This behavior was changed in [#472](https://github.com/prettier/prettier/pull/472), which allowed to preserve line endings preferred on Windows (`\r\n`, also known as `CRLF`).
+
+[Since Prettier version 1.15](https://prettier.io/blog/2018/11/07/1.15.0.html#add-an-option-to-enforce-line-endings-5327-by-kachkaev), the flavor of line endings is configurable.
+The default value was set to `auto` for backwards compatibility, which meant that Prettier preserved a flavor of line endings already present in a given file.
+
+With `endOfLine` equal to `auto`, Prettier converted mixed line endings within one file to what was found at the end of the first line.
+However, line endings in neighboring files could remain inconsistent.
+Besides, contributors on different operating systems could accidentally change line endings in previously committed files and this would be fine with Prettier.
+Doing so would produce a large `git diff` and thus make the line-by-line history for a file (`git blame`) harder to explore.
+
+You are encouraged to use the new default value.
+It may be also worth [checking the option docs](https://prettier.io/docs/en/options.html#end-of-line) to ensure your git repo is configured correctly.
+This will help you avoid a mix of line endings in the repo and a broken `git blame`.
+If the old behavior is still preferred, please configure Prettier with `{ "endOfLine": "auto" }`.
