--- a/changelog_unreleased/api/pr-6963.md
+++ b/changelog_unreleased/api/pr-6963.md
@@ -1,6 +1,6 @@
 #### Change default value for `trailingComma` to `es5` ([#6963](https://github.com/prettier/prettier/pull/6963) by [@fisker](https://github.com/fisker))
 
-Before v2.0, Prettier was avoiding trailing commas by default where possible.
+Before version 2.0, Prettier was avoiding trailing commas by default where possible.
 This made the resulting JavaScript compatible with now very old environments such as IE8, but implied [some missed opportunities](https://medium.com/@nikgraf/why-you-should-enforce-dangling-commas-for-multiline-statements-d034c98e36f8).
 
 Prettier has included an [option to configure trailing commas](https://prettier.io/docs/en/options.html#trailing-commas) since its early days, and an initiative to change the default value has been out there [for over three years](https://github.com/prettier/prettier/issues/68).
