--- a/changelog_unreleased/html/pr-7395.md
+++ b/changelog_unreleased/html/pr-7395.md
@@ -1,4 +1,4 @@
-#### Fix html self-closing tag format ([#7395](https://github.com/prettier/prettier/pull/7395) by [@fisker](https://github.com/fisker))
+#### Fix inconsistent formatting of self-closing tags ([#7395](https://github.com/prettier/prettier/pull/7395) by [@fisker](https://github.com/fisker))
 
 <!-- prettier-ignore -->
 ```html
