--- a/changelog_unreleased/api/pr-6993.md
+++ b/changelog_unreleased/api/pr-6993.md
@@ -1,4 +1,21 @@
 #### Remove deprecated api ([#6993](https://github.com/prettier/prettier/pull/6993) by [@fisker](https://github.com/fisker))
 
-- Remove parser `typescript-eslint` (use `typescript` instead)
-- Remove `mapDoc` from `util-shared` (use `mapDoc` from `doc-utils` instead)
+- Parser `typescript-eslint` is removed.
+
+  use `typescript` instead
+
+- `prettier.util.mapDoc` is removed
+
+  use `prettier.doc.utils.mapDoc` instead.
+
+- `prettier.util.isNextLineEmpty` is updated
+
+  use `isNextLineEmpty(text, node, locEnd)` instead of `isNextLineEmpty(text, node, options)`.
+
+- `prettier.util.isPreviousLineEmpty` is updated
+
+  use `isPreviousLineEmpty(text, node, locStart)` instead of `isNextLineEmpty(text, node, options)`.
+
+- `prettier.util.getNextNonSpaceNonCommentCharacterIndex` is updated
+
+  use `getNextNonSpaceNonCommentCharacterIndex(text, node, locEnd)` instead of `getNextNonSpaceNonCommentCharacterIndex(text, node, options)`.
