--- a/changelog_unreleased/api/pr-6993.md
+++ b/changelog_unreleased/api/pr-6993.md
@@ -2,20 +2,20 @@
 
 - Parser `typescript-eslint` is removed.
 
-  use `typescript` instead
+  Use `typescript` instead.
 
 - `prettier.util.mapDoc` is removed
 
-  use `prettier.doc.utils.mapDoc` instead.
+  Use `prettier.doc.utils.mapDoc` instead.
 
 - `prettier.util.isNextLineEmpty` is updated
 
-  use `isNextLineEmpty(text, node, locEnd)` instead of `isNextLineEmpty(text, node, options)`.
+  Use `isNextLineEmpty(text, node, locEnd)` instead of `isNextLineEmpty(text, node, options)`.
 
 - `prettier.util.isPreviousLineEmpty` is updated
 
-  use `isPreviousLineEmpty(text, node, locStart)` instead of `isNextLineEmpty(text, node, options)`.
+  Use `isPreviousLineEmpty(text, node, locStart)` instead of `isNextLineEmpty(text, node, options)`.
 
 - `prettier.util.getNextNonSpaceNonCommentCharacterIndex` is updated
 
-  use `getNextNonSpaceNonCommentCharacterIndex(text, node, locEnd)` instead of `getNextNonSpaceNonCommentCharacterIndex(text, node, options)`.
+  Use `getNextNonSpaceNonCommentCharacterIndex(text, node, locEnd)` instead of `getNextNonSpaceNonCommentCharacterIndex(text, node, options)`.
