--- a/changelog_unreleased/flow/pr-7484.md
+++ b/changelog_unreleased/flow/pr-7484.md
@@ -1,6 +1,6 @@
 #### Add support for the `ClassPrivateProperty` ([#7484](https://github.com/prettier/prettier/pull/7484) by [@fisker](https://github.com/fisker))
 
-Previously symbol `#` of `ClassPrivateProperty` is missing, now this bug is fixed.
+Previously, symbol `#` of `ClassPrivateProperty` is missing, now this bug been fixed.
 
 <!-- prettier-ignore -->
 ```jsx
