--- a/changelog_unreleased/javascript/pr-7500.md
+++ b/changelog_unreleased/javascript/pr-7500.md
@@ -1,13 +1,16 @@
-#### Address a parentheses bug for an edge case with optional chaining ([#7500](https://github.com/prettier/prettier/pull/7500) by [@thorn0](https://github.com/thorn0))
+#### Fix edge cases with parentheses around optional chaining ([#7500](https://github.com/prettier/prettier/pull/7500) by [@thorn0](https://github.com/thorn0))
 
 <!-- prettier-ignore -->
 ```jsx
 // Input
 (foo?.bar)();
+new (foo?.bar)();
 
 // Prettier stable
 foo?.bar();
+new foo?.bar();
 
 // Prettier master
 (foo?.bar)();
+new (foo?.bar)();
 ```
