--- a/changelog_unreleased/api/pr-7485.md
+++ b/changelog_unreleased/api/pr-7485.md
@@ -1,3 +1,3 @@
 #### Cache plugins search result ([#7485](https://github.com/prettier/prettier/pull/7485) by [@fisker](https://github.com/fisker))
 
-Previously, we search plugins on every `format` call, not the plugins search result is cached, and `clearPluginsCache` is added for clear that cache.
+Previously, we search plugins on every `format` call, the plugins search result is cached since v2.0.0, and `clearPluginsCache` is added for clear that cache.
