--- a/website/blog/2020-00-00-2.0.0.md
+++ b/website/blog/2020-00-00-2.0.0.md
@@ -23,7 +23,7 @@ Previously, a space would be added after the `function` keyword in function decl
 ##### Functions
 
 <!-- prettier-ignore -->
-```ts
+```typescript
 // Prettier stable
 const identity = function(value) {
   return value;
@@ -46,7 +46,7 @@ const f = function <T>(value: T) {};
 ##### Generators
 
 <!-- prettier-ignore -->
-```ts
+```typescript
 // Prettier stable
 function* foo<T>() {}
 class Bar {
@@ -350,7 +350,7 @@ A new value for the `parser` option has been added: `babel-ts`, which stands for
 #### Fix formatting of type operator as arrow function return type ([#6901](https://github.com/prettier/prettier/pull/6901) by [@sosukesuzuki](https://github.com/sosukesuzuki))
 
 <!-- prettier-ignore -->
-```ts
+```typescript
 // Input
 export const getVehicleDescriptor = async (
   vehicleId: string
@@ -429,7 +429,7 @@ type ValidateArgs = [
 #### Remove extra indentation for arrow function on variable declaration with comment ([#7094](https://github.com/prettier/prettier/pull/7094) by [@sosukesuzuki](https://github.com/sosukesuzuki))
 
 <!-- prettier-ignore -->
-```ts
+```typescript
 // Input
 const foo = () => {
   return;
@@ -456,7 +456,7 @@ const foo = () => {
 #### Fix printing of comments in function types ([#7104](https://github.com/prettier/prettier/pull/7104) by [@thorn0](https://github.com/thorn0))
 
 <!-- prettier-ignore -->
-```ts
+```typescript
 // Input
 type f1 = (
   currentRequest: {a: number},
@@ -479,7 +479,7 @@ type f1 = (
 #### Fix formatting comments for function-like nodes ([#7144](https://github.com/prettier/prettier/pull/7144) by [@armano2](https://github.com/armano2))
 
 <!-- prettier-ignore -->
-```ts
+```typescript
 // Input
 interface foo1 {
   bar1/* foo */ (/* baz */) // bat
@@ -532,7 +532,7 @@ let foo9: new (/* bar */) => /* foo */ /* baz */ string;
 let foo10: new (/* foo */ a: /* bar */ string) => /* baz */ string;
 ```
 
-```ts
+```typescript
 // Input
 abstract class Test {
   abstract foo12 /* foo */ (a: /* bar */ string): /* baz */ void
@@ -562,7 +562,7 @@ abstract class Test {
 #### Fix printing of mapped types with the template type omitted ([#7221](https://github.com/prettier/prettier/pull/7221) by [@cola119](https://github.com/cola119))
 
 <!-- prettier-ignore -->
-```ts
+```typescript
 // Input
 type A = { [key in B] };
 
@@ -578,7 +578,7 @@ type A = { [key in B] };
 Even though index signatures without type annotations or with multiple parameters aren't valid TypeScript, the TypeScript parser supports this syntax. In line with the [previous error recovery efforts](https://prettier.io/blog/2019/11/09/1.19.0.html#enable-formatting-even-if-there-are-parse-errors-in-some-cases-6816-by-thorn0-and-the-babel-team), Prettier now makes sure its output still can be parsed in these cases. Previous versions produced unparseable code.
 
 <!-- prettier-ignore -->
-```ts
+```typescript
 // Input
 type A = { [key: string] };
 type B = { [a: string, b: string]: string; };
