Fix website files

--- a/changelog_unreleased/api/pr-7533.md
+++ b/changelog_unreleased/api/pr-7533.md
@@ -1,3 +1,3 @@
 #### Remove deprecated parser `babylon` ([#7533](https://github.com/prettier/prettier/pull/7533) by [@fisker](https://github.com/fisker))
 
-Parser `babylon` renamed to `babel` in _v1.16.0_, but aliased to keep backwards compatibility, now it's removed.
+Parser `babylon` has been renamed to `babel` since _v1.16.0_, but aliased to keep backwards compatibility, now it's removed.
