--- a/changelog_unreleased/html/pr-7556.md
+++ b/changelog_unreleased/html/pr-7556.md
@@ -14,10 +14,5 @@
 ></div>
 
 <!-- Prettier master -->
-<div
-  style="
-    color: red;
-    display: inline;
-  "
-></div>
+<div style="color: red; display: inline;"></div>
 ```
