Add more example

--- a/changelog_unreleased/html/pr-7556.md
+++ b/changelog_unreleased/html/pr-7556.md
@@ -6,13 +6,43 @@
 <div style="   color : red;
             display    :inline ">
   </div>
+<div style="   color : red;
+            display    :inline; height: auto;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0; ">
+  </div>
 
 <!-- Prettier stable -->
 <div
   style="   color : red;
             display    :inline "
 ></div>
+<div
+  style="   color : red;
+            display    :inline; height: auto;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0; "
+></div>
+
 
 <!-- Prettier master -->
 <div style="color: red; display: inline;"></div>
+<div
+  style="
+    color: red;
+    display: inline;
+    height: auto;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+  "
+></div>
 ```
