Add more example

--- a/changelog_unreleased/html/pr-7555.md
+++ b/changelog_unreleased/html/pr-7555.md
@@ -5,13 +5,31 @@
 <!-- Input -->
 <div class="  foo
 bar baz"></div>
+<div class="
+another element with so many classes
+even can not fix one line
+really a lot and lot of classes
+"></div>
 
 <!-- Prettier stable -->
 <div
   class="  foo
 bar baz"
-></div>;
+></div>
+<div
+  class="
+another element with so many classes
+even can not fix one line
+really a lot and lot of classes
+"
+></div>
 
 <!-- Prettier master -->
 <div class="foo bar baz"></div>
+<div
+  class="
+    another element with so many classes even can not fix one line really a lot
+    and lot of classes
+  "
+></div>
 ```
