--- a/changelog_unreleased/html/pr-7555.md
+++ b/changelog_unreleased/html/pr-7555.md
@@ -7,7 +7,7 @@
 bar baz"></div>
 <div class="
 another element with so many classes
-even can not fix one line
+even can not fit one line
 really a lot and lot of classes
 "></div>
 
@@ -19,7 +19,7 @@ bar baz"
 <div
   class="
 another element with so many classes
-even can not fix one line
+even can not fit one line
 really a lot and lot of classes
 "
 ></div>
@@ -28,7 +28,7 @@ really a lot and lot of classes
 <div class="foo bar baz"></div>
 <div
   class="
-    another element with so many classes even can not fix one line really a lot
+    another element with so many classes even can not fit one line really a lot
     and lot of classes
   "
 ></div>
