Ignore more mustache

--- a/changelog_unreleased/html/pr-7556.md
+++ b/changelog_unreleased/html/pr-7556.md
@@ -1,4 +1,4 @@
-#### Format HTML attribute `style` value ([#7556](https://github.com/prettier/prettier/pull/7556) by [@fisker](https://github.com/fisker))
+#### Format value of HTML `style` attribute ([#7556](https://github.com/prettier/prettier/pull/7556) by [@fisker](https://github.com/fisker))
 
 <!-- prettier-ignore -->
 ```html
