--- a/changelog_unreleased/html/pr-7555.md
+++ b/changelog_unreleased/html/pr-7555.md
@@ -1,4 +1,4 @@
-#### Format HTML attribute `class` value ([#7555](https://github.com/prettier/prettier/pull/7555) by [@fisker](https://github.com/fisker))
+#### Format value of HTML `class` attribute ([#7555](https://github.com/prettier/prettier/pull/7555) by [@fisker](https://github.com/fisker))
 
 <!-- prettier-ignore -->
 ```html
@@ -27,9 +27,6 @@ really a lot and lot of classes
 <!-- Prettier master -->
 <div class="foo bar baz"></div>
 <div
-  class="
-    another element with so many classes even can not fit one line really a lot
-    and lot of classes
-  "
+  class="another element with so many classes even can not fit one line really a lot and lot of classes"
 ></div>
 ```
