--- a/changelog_unreleased/javascript/pr-3903.md
+++ b/changelog_unreleased/javascript/pr-3903.md
@@ -1,23 +1,9 @@
-#### Always add a space after the `function` keyword ([#3903](https://github.com/prettier/prettier/pull/3903) by [@j-f1](https://github.com/j-f1), [@josephfrazier](https://github.com/josephfrazier), [@sosukesuzuki](https://github.com/sosukesuzuki), [@thorn0](https://github.com/thorn0))
+#### Always add a space after the `function` keyword ([#3903](https://github.com/prettier/prettier/pull/3903) by [@j-f1](https://github.com/j-f1), [@josephfrazier](https://github.com/josephfrazier), [@sosukesuzuki](https://github.com/sosukesuzuki), [@thorn0](https://github.com/thorn0); [#7516](https://github.com/prettier/prettier/pull/7516) by [@bakkot](https://github.com/bakkot))
 
-Previously, a space would be added after the `function` keyword in function declarations, but not in function expressions. Now, for consistency, a space is always added after the `function` keyword, including in generators. Also, a space is now added between `yield` and `*`, which can help with [catching bugs](https://github.com/prettier/prettier/issues/7028#user-content-bugs).
+Previously, a space would be added after the `function` keyword in function declarations, but not in function expressions. Now, for consistency, a space is always added after the `function` keyword. The only exception is generator declarations where `function*` is treated as a whole word.
 
 <!-- prettier-ignore -->
-```js
-// Input
-const identity = function (value) {
-  return value;
-};
-function identity (value) {
-  return value;
-}
-function * getRawText() {
-  for (const token of tokens) {
-    yield* token.getRawText();
-  }
-}
-const f = function<T>(value: T) {}
-
+```ts
 // Prettier stable
 const identity = function(value) {
   return value;
@@ -25,12 +11,8 @@ const identity = function(value) {
 function identity(value) {
   return value;
 }
-function* getRawText() {
-  for (const token of tokens) {
-    yield* token.getRawText();
-  }
-}
 const f = function<T>(value: T) {};
+const g = function*() {};
 
 // Prettier master
 const identity = function (value) {
@@ -39,10 +21,6 @@ const identity = function (value) {
 function identity(value) {
   return value;
 }
-function *getRawText() {
-  for (const token of tokens) {
-    yield *token.getRawText();
-  }
-}
 const f = function <T>(value: T) {};
+const g = function* () {};
 ```
