--- a/changelog_unreleased/html/pr-7654.md
+++ b/changelog_unreleased/html/pr-7654.md
@@ -1,10 +1,6 @@
-#### Title ([#7654](https://github.com/prettier/prettier/pull/7654) by [@graemeworthy](https://github.com/graemeworthy))
+#### Support `<!-- prettier ignore -->` for text ([#7654](https://github.com/prettier/prettier/pull/7654) by [@graemeworthy](https://github.com/graemeworthy))
 
-In the prettier html parser is used to mark lines for prettier to ignore.
-However, text nodes were excluded from being ignored and were being split.
-
-Excluding text nodes from goes against a typical use-case which is to mark
-macros or other pre-processor commands.
+Previosly, it worked only for tags. Useful for protecting various macros and pre-processor commands from being corrupted by formatting.
 
 <!-- prettier-ignore -->
 ```html
