edit changelog entries

--- a/changelog_unreleased/api/pr-6963.md
+++ b/changelog_unreleased/api/pr-6963.md
@@ -1,4 +1,4 @@
-#### Change default value for `trailingComma` to `es5` ([#6963](https://github.com/prettier/prettier/pull/6963) by [@fisker](https://github.com/fisker))
+#### [BREAKING] Change default value for `trailingComma` to `es5` ([#6963](https://github.com/prettier/prettier/pull/6963) by [@fisker](https://github.com/fisker))
 
 Before version 2.0, Prettier was avoiding trailing commas by default where possible.
 This made the resulting JavaScript compatible with now very old environments such as IE8, but implied [some missed opportunities](https://medium.com/@nikgraf/why-you-should-enforce-dangling-commas-for-multiline-statements-d034c98e36f8).
