--- a/changelog_unreleased/api/pr-6993.md
+++ b/changelog_unreleased/api/pr-6993.md
@@ -1,4 +1,4 @@
-#### Remove deprecated api ([#6993](https://github.com/prettier/prettier/pull/6993) by [@fisker](https://github.com/fisker))
+#### [BREAKING] Remove deprecated API ([#6993](https://github.com/prettier/prettier/pull/6993) by [@fisker](https://github.com/fisker))
 
 - Parser `typescript-eslint` is removed.
 
