--- a/changelog_unreleased/flow/pr-7482.md
+++ b/changelog_unreleased/flow/pr-7482.md
@@ -1,10 +1,9 @@
-#### Add support for `decorators` ([#7482](https://github.com/prettier/prettier/pull/7482) by [@fisker](https://github.com/fisker))
+#### Add support for decorators ([#7482](https://github.com/prettier/prettier/pull/7482) by [@fisker](https://github.com/fisker))
 
 <!-- prettier-ignore -->
 ```jsx
 // Input
 /* @flow */
-
 @decorator4
 class Foo {
   @decorator1
@@ -16,18 +15,10 @@ class Foo {
 }
 
 // Prettier stable
-SyntaxError: Unexpected token `@`, expected the token `class` (3:1)
-  1 | /* @flow */
-  2 |
-> 3 | @decorator4
-    | ^
-  4 | class Foo {
-  5 |   @decorator1
-  6 |   method1() {}
+SyntaxError: Unexpected token `@`, expected the token `class` (2:1)
 
 // Prettier master
 /* @flow */
-
 @decorator4
 class Foo {
   @decorator1
