--- a/changelog_unreleased/flow/pr-7484.md
+++ b/changelog_unreleased/flow/pr-7484.md
@@ -1,9 +1,7 @@
-#### Add support for the `ClassPrivateProperty` ([#7484](https://github.com/prettier/prettier/pull/7484) by [@fisker](https://github.com/fisker))
-
-Previously, symbol `#` of `ClassPrivateProperty` is missing, now this bug been fixed.
+#### Fix private class field declarations ([#7484](https://github.com/prettier/prettier/pull/7484) by [@fisker](https://github.com/fisker))
 
 <!-- prettier-ignore -->
-```jsx
+```js
 // Input
 class Foo {#privateProp: number;}
 
