--- a/changelog_unreleased/handlebars/pr-7275.md
+++ b/changelog_unreleased/handlebars/pr-7275.md
@@ -1,4 +1,4 @@
-#### Glimmer: Add prettier-ignore ([#7275](https://github.com/prettier/prettier/pull/7275) by [@chadian](https://github.com/chadian))
+#### Add support for `prettier-ignore` ([#7275](https://github.com/prettier/prettier/pull/7275) by [@chadian](https://github.com/chadian))
 
 <!-- prettier-ignore -->
 ```hbs
