--- a/changelog_unreleased/handlebars/pr-7306.md
+++ b/changelog_unreleased/handlebars/pr-7306.md
@@ -1,4 +1,4 @@
-#### Support printing inline handlebars in html (through embed function) ([#7306](https://github.com/prettier/prettier/pull/7306) by [@dcyriller](https://github.com/dcyriller))
+#### Support printing inline Handlebars in HTML ([#7306](https://github.com/prettier/prettier/pull/7306) by [@dcyriller](https://github.com/dcyriller))
 
 <!-- prettier-ignore -->
 ```
