--- a/changelog_unreleased/html/pr-7293.md
+++ b/changelog_unreleased/html/pr-7293.md
@@ -1,10 +1,10 @@
-#### Do not throw on broken html ([#7293](https://github.com/prettier/prettier/pull/7293) by [@fisker](https://github.com/fisker))
+#### Do not throw on broken HTML ([#7293](https://github.com/prettier/prettier/pull/7293) by [@fisker](https://github.com/fisker))
 
 <!-- prettier-ignore -->
 ```html
 <!-- Input -->
 <div><span>
-< 
+<
 
 <!-- Prettier stable -->
 TypeError: Cannot read property 'start' of null
