--- a/changelog_unreleased/html/pr-7461.md
+++ b/changelog_unreleased/html/pr-7461.md
@@ -1,4 +1,4 @@
-#### Fix Empty lines unexpectedly added after `table` tags ([#7461](https://github.com/prettier/prettier/pull/7461) by [@ikatyang](https://github.com/ikatyang))
+#### Fix empty lines unexpectedly added after `table` tags ([#7461](https://github.com/prettier/prettier/pull/7461) by [@ikatyang](https://github.com/ikatyang))
 
 <!-- prettier-ignore -->
 ```html
