--- a/changelog_unreleased/javascript/pr-7011.md
+++ b/changelog_unreleased/javascript/pr-7011.md
@@ -1,6 +1,4 @@
-#### Preserve parentheses for JSDoc type casting with extra spaces and asterisk at end ([#7011](https://github.com/prettier/prettier/pull/7011) by [@evilebottnawi](https://github.com/evilebottnawi))
-
-Formatting of comments in labeled statements was not stable
+#### Preserve parentheses for JSDoc type casting with extra trailing spaces and asterisks ([#7011](https://github.com/prettier/prettier/pull/7011) by [@evilebottnawi](https://github.com/evilebottnawi))
 
 <!-- prettier-ignore -->
 ```javascript
