--- a/changelog_unreleased/javascript/pr-7208.md
+++ b/changelog_unreleased/javascript/pr-7208.md
@@ -1,8 +1,7 @@
-#### Do not add hard linebreak for html template ([#7208](https://github.com/prettier/prettier/pull/7208) by [@saschanaz](https://github.com/saschanaz))
+#### Respect whitespace significance in HTML template literals ([#7208](https://github.com/prettier/prettier/pull/7208) by [@saschanaz](https://github.com/saschanaz))
 
-Prettier had been adding newlines for every HTML template string, which can cause
-unexpected whitespaces in rendered HTML. #7208 prevents this unless
-`htmlWhitespaceSensitivity: ignore` option is given.
+Prettier had been adding newlines for every HTML template string, which could lead to unexpected whitespace in rendered HTML.
+This doesn't happen anymore unless `--html-whitespace-sensitivity ignore` option is given.
 
 <!-- prettier-ignore -->
 ```jsx
