--- a/changelog_unreleased/javascript/pr-7367.md
+++ b/changelog_unreleased/javascript/pr-7367.md
@@ -1,10 +1,10 @@
-#### Fix: remove unnecessary parens when yielding jsx ([#7367](https://github.com/prettier/prettier/pull/7367) by [@cola119](https://github.com/cola119))
+#### Fix: remove unnecessary parens when yielding JSX ([#7367](https://github.com/prettier/prettier/pull/7367) by [@cola119](https://github.com/cola119))
 
 <!-- prettier-ignore -->
 ```jsx
 // Input
 function* f() {
-  yield <div>generator</div>
+  yield <div>generator</div>;
 }
 
 // Prettier stable
@@ -14,6 +14,6 @@ function* f() {
 
 // Prettier master
 function* f() {
-  yield <div>generator</div>
+  yield <div>generator</div>;
 }
 ```
