--- a/changelog_unreleased/javascript/pr-7491.md
+++ b/changelog_unreleased/javascript/pr-7491.md
@@ -1,6 +1,6 @@
-#### Keep parentheses of `SequenceExpression` for `ExportDefaultDeclaration` ([#7491](https://github.com/prettier/prettier/pull/7491) by [@fisker](https://github.com/fisker))
+#### Keep parentheses around comma expressions in default export declarations ([#7491](https://github.com/prettier/prettier/pull/7491) by [@fisker](https://github.com/fisker))
 
-Remove parentheses of `SequenceExpression` breaks `ExportDefaultDeclaration`.
+Omitting these parentheses makes the code invalid.
 
 <!-- prettier-ignore -->
 ```jsx
