--- a/changelog_unreleased/mdx/pr-6398.md
+++ b/changelog_unreleased/mdx/pr-6398.md
@@ -1,6 +1,4 @@
-#### Fix JSX Fragment format incorrectly ([#6398](https://github.com/prettier/prettier/pull/6398) by [@JounQin](https://github.com/JounQin))
-
-Previous versions format JSX Fragment incorrectly in mdx, this has been fixed in this version.
+#### Add support for JSX fragments ([#6398](https://github.com/prettier/prettier/pull/6398) by [@JounQin](https://github.com/JounQin))
 
 <!-- prettier-ignore -->
 ```md
