--- a/changelog_unreleased/typescript/pr-6901.md
+++ b/changelog_unreleased/typescript/pr-6901.md
@@ -1,4 +1,4 @@
-#### Fix formatting of type operator as arrow function return type ([#6901](https://github.com/prettier/prettier/pull/6901) by [@sosukesuzuki](https://github.com/sosukesuzuki))
+#### Fix formatting of complex types in arrow function return type annotations ([#6901](https://github.com/prettier/prettier/pull/6901) by [@sosukesuzuki](https://github.com/sosukesuzuki))
 
 <!-- prettier-ignore -->
 ```ts
