--- a/changelog_unreleased/typescript/pr-7020.md
+++ b/changelog_unreleased/typescript/pr-7020.md
@@ -1,5 +1,7 @@
 #### Print JSDoc-only types as is instead of throwing strange errors ([#7020](https://github.com/prettier/prettier/pull/7020) by [@thorn0](https://github.com/thorn0))
 
+Another fix related to error recovery. Should come in handy to those who migrate from Flow to TypeScript.
+
 <!-- prettier-ignore -->
 ```jsx
 // Input
