--- a/changelog_unreleased/typescript/pr-7094.md
+++ b/changelog_unreleased/typescript/pr-7094.md
@@ -1,14 +1,16 @@
-#### Remove extra indentation for arrow function on variable declaration with comment ([#7094](https://github.com/prettier/prettier/pull/7094) by [@sosukesuzuki](https://github.com/sosukesuzuki))
+#### Fix indentation of arrow functions in variable declarations followed by comments ([#7094](https://github.com/prettier/prettier/pull/7094) by [@sosukesuzuki](https://github.com/sosukesuzuki))
+
+This could happen with code written in the no-semicolon style if the statement after the variable declaration was prefixed with a semicolon to avoid ASI issues.
 
 <!-- prettier-ignore -->
 ```ts
 // Input
 const foo = () => {
-  return;
+  return
 }
 
 // foo
-;
+;[1,2,3].forEach(bar)
 
 // Prettier stable
 const foo = () => {
@@ -16,6 +18,7 @@ const foo = () => {
   };
 
   // foo
+[1, 2, 3].forEach(bar);
 
 // Prettier master
 const foo = () => {
@@ -23,4 +26,5 @@ const foo = () => {
 };
 
 // foo
+[1, 2, 3].forEach(bar);
 ```
