--- a/changelog_unreleased/flow/pr-7472.md
+++ b/changelog_unreleased/flow/pr-7472.md
@@ -1,15 +1,14 @@
-#### Add typing support for the `symbol` type ([#7472](https://github.com/prettier/prettier/pull/7472) by [@fisker](https://github.com/fisker))
+#### Add support for `symbol` ([#7472](https://github.com/prettier/prettier/pull/7472) by [@fisker](https://github.com/fisker))
 
-New ast node type is introduced in flow@0.114.0, now it's recognized.
+A new AST node type was introduced in flow@0.114.0, now it's recognized.
 
 <!-- prettier-ignore -->
 ```jsx
 // Input
 const x: symbol = Symbol();
 
-// Prettier stable
+// Prettier after updating Flow, but without this fix
 Error: unknown type: "SymbolTypeAnnotation"
-(Error throws on next branch)
 
 // Prettier master
 const x: symbol = Symbol();
