--- a/changelog_unreleased/html/pr-5959.md
+++ b/changelog_unreleased/html/pr-5959.md
@@ -1,7 +1,7 @@
 #### Comments in `pre` tags caused bad formatting of following closing tag ([#5959](https://github.com/prettier/prettier/pull/5959) by [@selvazhagan](https://github.com/selvazhagan))
 
 <!-- prettier-ignore -->
-```
+```html
 <!-- Input -->
 <details>
 <pre>
