--- a/changelog_unreleased/javascript/pr-6685.md
+++ b/changelog_unreleased/javascript/pr-6685.md
@@ -1,22 +1,25 @@
-#### Method chain breaking ([#6685](https://github.com/prettier/prettier/pull/6685) by [@mmkal](https://github.com/mmkal))
+#### Method chain breaking heuristic ([#6685](https://github.com/prettier/prettier/pull/6685) by [@mmkal](https://github.com/mmkal))
 
-Previously, any chained method calls of length three or longer would be automatically broken. This uses a heuristic for the complexity of the arguments in the chain, rather than just the chain length. Now, if chained method calls have arguments which aren't easy to understand at a glance (e.g. functions or deeply-nested objects), the chain is broken. Otherwise, they're allowed to remain on one line. See prior issues [#3197](https://github.com/prettier/prettier/issues/3107), [#4765](https://github.com/prettier/prettier/pull/4765), [#1565](https://github.com/prettier/prettier/issues/1565) and [#4125](https://github.com/prettier/prettier/pull/4125) for context and examples.
+Previously, any method call chain of length three or longer would be automatically broken into multiple lines. The new heuristic is based on the complexity of the call arguments in the chain, rather than simply on the chain's length. Now, if chained method calls have arguments which aren't easy to understand at a glance (e.g. functions or deeply-nested objects), the chain is broken. Otherwise, they're allowed to remain on one line. See prior issues [#3197](https://github.com/prettier/prettier/issues/3107), [#4765](https://github.com/prettier/prettier/pull/4765), [#1565](https://github.com/prettier/prettier/issues/1565) and [#4125](https://github.com/prettier/prettier/pull/4125) for context and examples.
 
 <!-- prettier-ignore -->
 ```javascript
-// Input
-foo.one().two().three() === bar.four().five().six();
-
 // Output (Prettier stable)
-foo
-  .one()
-  .two()
-  .three() ===
+if (
+  foo
+    .one()
+    .two()
+    .three() ===
   bar
     .four()
     .five()
-    .six();
+    .six()
+) {
+  // ...
+}
 
 // Output (Prettier master)
-foo.one().two().three() === bar.four().five().six();
+if (foo.one().two().three() === bar.four().five().six()) {
+  // ...
+}
 ```
