--- a/changelog_unreleased/javascript/pr-6984.md
+++ b/changelog_unreleased/javascript/pr-6984.md
@@ -1,6 +1,4 @@
-#### Fix formatting of labeled statements with comments ([#6984](https://github.com/prettier/prettier/pull/6984) by [@clement26695](https://github.com/clement26695))
-
-Formatting of comments in labeled statements was not stable
+#### Fix unstable formatting of labeled statements with comments ([#6984](https://github.com/prettier/prettier/pull/6984) by [@clement26695](https://github.com/clement26695))
 
 <!-- prettier-ignore -->
 ```jsx
