--- a/changelog_unreleased/javascript/pr-7504.md
+++ b/changelog_unreleased/javascript/pr-7504.md
@@ -1,6 +1,6 @@
-#### Don't add parens to `undefined` in `ConditionalExpression` with `jsx` ([#7504](https://github.com/prettier/prettier/pull/7504) by [@fisker](https://github.com/fisker))
+#### Don't wrap `undefined` in parentheses in conditional expressions within JSX ([#7504](https://github.com/prettier/prettier/pull/7504) by [@fisker](https://github.com/fisker))
 
-Previously, we add parens to any value except `null` in `ConditionalExpression` with `jsx`, now `undefined` is excluded too.
+Previously, parentheses were added around any expression except `null`. Now, `undefined` is excluded too.
 
 <!-- prettier-ignore -->
 ```js
