--- a/changelog_unreleased/html/pr-7654.md
+++ b/changelog_unreleased/html/pr-7654.md
@@ -1,6 +1,6 @@
 #### Support `<!-- prettier ignore -->` for text ([#7654](https://github.com/prettier/prettier/pull/7654) by [@graemeworthy](https://github.com/graemeworthy))
 
-Previosly, it worked only for tags. Useful for protecting various macros and pre-processor commands from being corrupted by formatting.
+Previously, it worked only for tags. Useful for protecting various macros and pre-processor commands from being corrupted by formatting.
 
 <!-- prettier-ignore -->
 ```html
