--- a/changelog_unreleased/javascript/pr-7709.md
+++ b/changelog_unreleased/javascript/pr-7709.md
@@ -10,7 +10,5 @@ const foo = /* comments */
 const foo /* comments */ = bar;
 
 // Prettier master
-const foo =
-  /* comments */
-  bar;
+const foo = /* comments */ bar;
 ```
