--- a/changelog_unreleased/typescript/pr-7729.md
+++ b/changelog_unreleased/typescript/pr-7729.md
@@ -1,4 +1,4 @@
-# Fix printing of comments in empty type parameters ([#7729](https://github.com/prettier/prettier/pull/7729) by [@sosukesuzuki](https://github.com/sosukesuzuki))
+#### Fix printing of comments in empty type parameters ([#7729](https://github.com/prettier/prettier/pull/7729) by [@sosukesuzuki](https://github.com/sosukesuzuki))
 
 <!-- prettier-ignore -->
 ```ts
